--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <div class='container-fluid' , style="margin: 0px;">
+    <div class='container-fluid' , style="height:100%;margin: 0px;">
 
 
-        <div class="row intro justify-content-center align-items-center" style="text-align:center">
+        <div class="row justify-content-center align-items-center intro" style="text-align:center">
             <div class="col-md-12 col-sm-8" style="display: inline-block">
                 <div class="intro-name">
                     <strong>I AM HASSAN</strong><br>
